packages/webassemblyjs/test/fixtures/type-errors/and-mixed-operators/module.wast
(module (func (i32.and (i64.const 0) (f32.const 0))))
